[project]
name = "shuttle-authentication"
version = "0.1.0"
description = "Lightning fast authentication API."
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "argon2-cffi>=23.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
dev = "authentication.__main__:launch_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/authentication"]
